-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
6.2.0
-
None
-
-
6cadf068d2 (qt/qtquick3d/dev) b9e097adfd (qt/qtquick3d/6.3) 120aec1273 (qt/qtquick3d/6.2) 120aec1273 (qt/tqtc-qtquick3d/6.2) 120aec1273 (qt/tqtc-qtquick3d/6.2.3) 120aec1273 (qt/tqtc-qtquick3d/6.2.4) b9e097adfd (qt/qtquick3d/6.3.0)
If QQuick3DGeometry::Attribute::ComponentType is set to U16Type for joint indexes, the application crashes when the model is loaded.
To reproduce:
1) Load "Simple Skinning Example"
2) Change type of Vertex::joint to quint16.
3) set Q_STATIC_ASSERT(s_vertexSize == 40);
4) Change Component type for JointSemantic to U16Type