Enhance docs and some runtime checks for geometry data types

Fixes: QTBUG-98756
Change-Id: I452ec61c0677364b9d49c0e863ec39372d092778
Reviewed-by: Inho Lee <inho.lee@qt.io>
Reviewed-by: Andy Nichols <andy.nichols@qt.io>
(cherry picked from commit 6cadf068d22a0d5ae9037a61eb04cceaf8402fd4)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>